--- a/package.json
+++ b/package.json
@@ -21,5 +21,14 @@
   "dependencies": {
     "com.gameframex.unity": "1.1.1",
     "com.appsflyer.unity": "6.17.1"
+  },
+  "devDependencies": {
+    "semantic-release": "^24.2.0",
+    "@semantic-release/changelog": "^6.0.3",
+    "@semantic-release/git": "^10.0.1"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://npm.cnb.cool/GameFrameX/npm/-/packages/"
   }
 }
